--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "iron-session": "^8.0.1",
         "jwt-decode": "^4.0.0",
         "next": "^14.0.4",
         "react": "^18",
